<resources>
    <string name="app_name">Travel</string>
    <string name="let_s_enjoy_a_n_a_new_world">Let\'s Enjoy A\nNew World</string>
    <string name="search_the_safest_destination">Search the safest destination</string>
    <string name="get_started">Get Started</string>
    <string name="hi_lexi">Hi, Lexi!</string>
    <string name="notification">Notification</string>
    <string name="where_you_want_to_n_go">Where you want to \ngo?</string>
    <string name="search">Search</string>
    <string name="upcoming_trips">Upcoming Trips</string>
    <string name="dummy_start_date_time">10 May, 12:30 pm</string>
    <string name="dummy_end_time">11 May, 08:15 am</string>
    <string name="abc">ABC</string>
    <string name="xyz">XYZ</string>
    <string name="abianca_sodaium">Abianca, Sodaium</string>
    <string name="dumy_destination">Xyzaira, Filanto</string>
    <string name="popular_destinations">Popular Destinations</string>
    <string name="view_all">View All</string>
    <string name="paris">Paris</string>
    <string name="france">France</string>
    <string name="book_your_flight">Book your flight</string>
    <string name="one_way">One Way</string>
    <string name="round_trip">Round Trip</string>
    <string name="from">FROM</string>
    <string name="abianca_abc">Abianca (ABC)</string>
    <string name="to">TO</string>
    <string name="view_flights">View Flights</string>
    <string name="dummy_date_time">10 May, 12:30 PM</string>
    <string name="date">DATE</string>
</resources>