<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_gradient"
    tools:context=".TravelActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="50dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/profile_picture"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:contentDescription="@string/hi_lexi"
                    android:src="@drawable/profile_picture"
                    android:layout_marginTop="32dp"
                    android:layout_marginStart="32dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hi_lexi"
                    android:layout_marginStart="24dp"
                    android:fontFamily="@font/roboto"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    app:layout_constraintTop_toTopOf="@id/profile_picture"
                    app:layout_constraintBottom_toBottomOf="@id/profile_picture"
                    app:layout_constraintStart_toEndOf="@id/profile_picture"/>

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_notification_background"
                    android:layout_marginEnd="32dp"
                    android:contentDescription="@string/notification"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/textView3"
                    app:layout_constraintBottom_toBottomOf="@id/textView3"/>

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_notifications"
                    android:contentDescription="@string/notification"
                    app:layout_constraintStart_toStartOf="@id/imageView2"
                    app:layout_constraintEnd_toEndOf="@id/imageView2"
                    app:layout_constraintBottom_toBottomOf="@id/imageView2"
                    app:layout_constraintTop_toTopOf="@id/imageView2"/>

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/where_you_want_to_n_go"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:textSize="28sp"
                    android:fontFamily="@font/roboto"
                    android:layout_marginTop="32dp"
                    app:layout_constraintStart_toStartOf="@id/profile_picture"
                    app:layout_constraintTop_toBottomOf="@id/profile_picture"/>

                <EditText
                    android:id="@+id/edit_text_serch"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="32dp"
                    android:background="@drawable/search_edit_text_background"
                    android:drawableStart="@drawable/ic_search"
                    android:drawablePadding="12dp"
                    android:ems="10"
                    android:hint="@string/search"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName"
                    android:padding="8dp"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:textColorHint="#BABABA"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textView4" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/upcoming_trips"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:fontFamily="@font/roboto"
                    android:layout_marginTop="24dp"
                    app:layout_constraintStart_toStartOf="@id/edit_text_serch"
                    app:layout_constraintTop_toBottomOf="@id/edit_text_serch"/>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/cl"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:background="@drawable/gradient_trips"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textView5">

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dummy_start_date_time"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        android:fontFamily="@font/roboto"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="24dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dummy_end_time"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        android:fontFamily="@font/roboto"
                        android:layout_marginEnd="32dp"
                        android:layout_marginTop="24dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="@id/textView6"/>

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/abc"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        android:fontFamily="@font/roboto"
                        android:layout_marginTop="16dp"
                        app:layout_constraintStart_toStartOf="@id/textView6"
                        app:layout_constraintTop_toBottomOf="@id/textView6"/>

                    <LinearLayout
                        android:id="@+id/ll"
                        android:layout_width="150dp"
                        android:layout_height="20dp"
                        android:orientation="horizontal"
                        android:gravity="center"
                        app:layout_constraintEnd_toStartOf="@id/textView9"
                        app:layout_constraintStart_toEndOf="@id/textView8"
                        app:layout_constraintTop_toTopOf="@id/textView8"
                        app:layout_constraintBottom_toBottomOf="@id/textView8">


                        <View
                            android:id="@+id/divider"
                            android:layout_width="40dp"
                            android:layout_height="1dp"
                            android:layout_marginEnd="8dp"
                            android:layout_marginStart="8dp"
                            android:background="#95A5AE"
                            android:layout_gravity="center"/>

                        <ImageView
                            android:id="@+id/imageView4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginStart="8dp"
                            android:layout_marginEnd="8dp"
                            android:contentDescription="@string/abc"
                            app:srcCompat="@drawable/ic_airplane" />

                        <View
                            android:id="@+id/divider2"
                            android:layout_width="40dp"
                            android:layout_height="1dp"
                            android:background="#95A5AE"
                            android:layout_gravity="center"/>

                    </LinearLayout>

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/xyz"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        android:fontFamily="@font/roboto"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="12dp"
                        app:layout_constraintEnd_toEndOf="@id/textView7"
                        app:layout_constraintTop_toBottomOf="@id/textView7"
                        app:layout_constraintBottom_toBottomOf="@id/ll"/>


                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/abianca_sodaium"
                        android:textSize="12sp"
                        android:textColor="#3F7EA4"
                        android:fontFamily="@font/roboto"
                        android:textStyle="bold"
                        android:padding="2dp"
                        android:paddingStart="4dp"
                        android:paddingEnd="4dp"
                        android:background="@drawable/sorce_destination_text_background"
                        android:layout_marginTop="16dp"
                        app:layout_constraintStart_toStartOf="@id/textView8"
                        app:layout_constraintTop_toBottomOf="@id/textView8"/>

                    <TextView
                        android:id="@+id/textView11"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dumy_destination"
                        android:textSize="12sp"
                        android:textColor="#3F7EA4"
                        android:fontFamily="@font/roboto"
                        android:textStyle="bold"
                        android:padding="2dp"
                        android:paddingStart="4dp"
                        android:paddingEnd="4dp"
                        android:background="@drawable/sorce_destination_text_background"
                        app:layout_constraintEnd_toEndOf="@id/textView9"
                        app:layout_constraintTop_toTopOf="@id/textView10"
                        app:layout_constraintBottom_toBottomOf="@id/textView10"/>


                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/popular_destinations"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/roboto"
                    android:layout_marginTop="32dp"
                    app:layout_constraintStart_toStartOf="@id/cl"
                    app:layout_constraintTop_toBottomOf="@id/cl"/>


                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/view_all"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    android:fontFamily="@font/roboto"
                    android:layout_marginEnd="32dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/textView12"
                    app:layout_constraintBottom_toBottomOf="@id/textView12"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/popular_destination_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="50dp"
                    android:paddingStart="32dp"
                    app:layout_constraintStart_toStartOf="@id/textView12"
                    app:layout_constraintTop_toBottomOf="@id/textView12"
                    app:layout_constraintEnd_toEndOf="@id/textView13"
                    app:layout_constraintBottom_toBottomOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/main_drawer"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="bottom"
        app:itemIconTint="#8c000000"
        app:itemTextColor="#e6000000"
        app:menu="@menu/navigation_menu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>