<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_gradient"
    tools:context=".BookingActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="wrap_content"
                    android:layout_height="300dp"
                    app:srcCompat="@drawable/ic_booking_background"
                    android:scaleType="fitXY"
                    android:contentDescription="@string/book_your_flight"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="320dp"
                    android:layout_height="250dp"
                    app:srcCompat="@drawable/ic_airlance_booking"
                    android:scaleType="fitXY"
                    android:contentDescription="@string/book_your_flight"
                    android:layout_marginTop="70dp"
                    app:layout_constraintStart_toStartOf="@id/imageView5"
                    app:layout_constraintTop_toTopOf="@id/imageView5"
                    app:layout_constraintEnd_toEndOf="@id/imageView5"/>

                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/book_your_flight"
                    android:textSize="28sp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:fontFamily="@font/roboto"
                    android:layout_marginTop="32dp"
                    android:layout_marginStart="32dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/imageView5"/>

                <LinearLayout
                    android:id="@+id/ll1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2"
                    android:background="@drawable/trip_background"
                    android:layout_marginTop="24dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textView14">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_get_started"
                        android:layout_width="0dp"
                        android:layout_height="45dp"
                        android:layout_weight="1"
                        style="@android:style/Widget.Button"
                        android:text="@string/one_way"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:fontFamily="@font/roboto"
                        android:textSize="16sp"
                        android:background="@drawable/main_btn_background"/>

                    <TextView
                        android:id="@+id/textView15"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/round_trip"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:fontFamily="@font/roboto"
                        android:textColor="#ACACAC"/>

                </LinearLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="375dp"
                    android:background="@drawable/popular_destination_background"
                    android:layout_marginStart="40dp"
                    android:layout_marginEnd="40dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="50dp"
                    android:elevation="4dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/ll1">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:layout_margin="16dp"
                        android:weightSum="4"
                        android:padding="12dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent">

                        <TextView
                            android:id="@+id/textView16"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/from"
                            android:textColor="#858484"
                            android:fontFamily="@font/roboto_medium"
                            android:textSize="14sp"/>

                        <EditText
                            android:id="@+id/edit_text_source"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:layout_marginTop="7dp"
                            android:ems="10"
                            android:inputType="textPersonName"
                            android:hint="@string/abianca_abc"
                            android:textColorHint="#505050"
                            android:textSize="15sp"
                            android:fontFamily="@font/roboto_medium"
                            android:paddingStart="10dp"
                            android:paddingEnd="10dp"
                            android:background="@drawable/booking_places_edit_text_background"
                            android:importantForAutofill="no" />

                        <TextView
                            android:id="@+id/textView17"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/to"
                            android:layout_marginTop="16dp"
                            android:textColor="#858484"
                            android:fontFamily="@font/roboto_medium"
                            android:textSize="14sp"/>

                        <EditText
                            android:id="@+id/edit_text_destination"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:layout_marginTop="7dp"
                            android:ems="10"
                            android:inputType="textPersonName"
                            android:hint="@string/abianca_abc"
                            android:textColorHint="#505050"
                            android:textSize="15sp"
                            android:fontFamily="@font/roboto_medium"
                            android:paddingStart="10dp"
                            android:paddingEnd="10dp"
                            android:background="@drawable/booking_places_edit_text_background"
                            android:importantForAutofill="no" />

                        <TextView
                            android:id="@+id/textView18"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/date"
                            android:layout_marginTop="16dp"
                            android:textColor="#858484"
                            android:fontFamily="@font/roboto_medium"
                            android:textSize="14sp"/>

                        <EditText
                            android:id="@+id/edit_text_date"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:layout_marginTop="7dp"
                            android:ems="10"
                            android:inputType="datetime"
                            android:hint="@string/dummy_date_time"
                            android:textColorHint="#505050"
                            android:textSize="15sp"
                            android:fontFamily="@font/roboto_medium"
                            android:paddingStart="10dp"
                            android:paddingEnd="10dp"
                            android:background="@drawable/booking_places_edit_text_background"
                            android:importantForAutofill="no" />

                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/btn_view_flights"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:layout_marginTop="20dp"
                            style="@android:style/Widget.Button"
                            android:text="@string/view_flights"
                            android:textColor="@color/white"
                            android:textStyle="bold"
                            android:fontFamily="@font/roboto_medium"
                            android:textSize="18sp"
                            android:background="@drawable/main_btn_background"/>

                    </LinearLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>