<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_gradient"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/cl1"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:background="@drawable/main_white_circle"
                    android:layout_marginStart="50dp"
                    android:layout_marginEnd="50dp"
                    android:layout_marginTop="70dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent">


                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="200dp"
                        android:layout_height="200dp"
                        app:srcCompat="@drawable/ic_main"
                        android:contentDescription="@string/app_name"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/let_s_enjoy_a_n_a_new_world"
                    android:gravity="center"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:fontFamily="@font/roboto"
                    android:textSize="40sp"
                    android:layout_marginTop="24dp"
                    app:layout_constraintStart_toStartOf="@id/cl1"
                    app:layout_constraintEnd_toEndOf="@id/cl1"
                    app:layout_constraintTop_toBottomOf="@id/cl1"/>

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/search_the_safest_destination"
                    android:layout_marginTop="32dp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/roboto"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="@id/textView"
                    app:layout_constraintEnd_toEndOf="@id/textView"
                    app:layout_constraintTop_toBottomOf="@id/textView"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_get_started"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="40dp"
                    android:layout_marginEnd="40dp"
                    android:layout_marginTop="60dp"
                    android:layout_marginBottom="60dp"
                    style="@android:style/Widget.Button"
                    android:text="@string/get_started"
                    android:textColor="@color/white"
                    android:fontFamily="@font/roboto_medium"
                    android:textSize="18sp"
                    android:background="@drawable/main_btn_background"
                    app:layout_constraintTop_toBottomOf="@id/textView2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>